--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,3 +14,4 @@ spring:
         properties:
             hibernate:
             globally_quoted_identifiers: true
+        defer-datasource-initialization: true
