--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -10,7 +10,7 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     properties:
       hibernate:
         globally_quoted_identifiers: true
