--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,26 @@
 spring:
-    application:
-        name: drones
-    datasource:
-        url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-        driver-class-name: org.h2.Driver
-        username: sa
-        password: password
-    jpa:
-        database-platform: org.hibernate.dialect.H2Dialect
-        show-sql: false
-        hibernate:
-            ddl-auto: update
-        properties:
-            hibernate:
-            globally_quoted_identifiers: true
-        defer-datasource-initialization: true
+  application:
+    name: drones
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+      globally_quoted_identifiers: true
+    defer-datasource-initialization: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui-custom.html
+    operationsSorter: method
