--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -2,21 +2,25 @@ spring:
   application:
     name: drones
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
-    password: password
+    password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
-        globally_quoted_identifiers: true
+      globally_quoted_identifiers: true
+    defer-datasource-initialization: true
   mvc:
     pathmatch:
-      matching-strategy:
-        ant-path-matcher
-server:
-    port: 8081
+      matching-strategy: ant_path_matcher
+
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui-custom.html
+    operationsSorter: method
